--- a/style.css
+++ b/style.css
@@ -13,3 +13,90 @@
     width: 100%;
     height: 200px;
 }
+
+#configs{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 50px;
+    background-color: rgb(20, 90, 120);
+}
+
+#configs:hover{
+    height: 200px;
+}
+
+#configs:hover #menu1{
+    display: block;
+}
+
+#configs:hover #menu2{
+    display: block;
+}
+
+#configs:hover #menu3{
+    display: block;
+}
+
+#menu1{
+    position: absolute;
+    top: 50px;
+    width: 50px;
+    height: 50px;
+    background-color: rgb(200, 120, 90);
+    display: none;
+}
+
+#menu2{
+    position: absolute;
+    top: 100px;
+    width: 50px;
+    height: 50px;
+    background-color: rgb(195, 209, 68);
+    display: none;
+}
+
+#menu3{
+    position: absolute;
+    top: 150px;
+    width: 50px;
+    height: 50px;
+    background-color: rgb(49, 235, 25);
+    display: none;
+}
+
+
+#basinConfigs{
+    position: absolute;
+    left: 50px;
+    width: 200px;
+    height: 400px;
+    background-color: rgb(200, 120, 90);
+    display: none;
+}
+
+#hydroConfigs{
+    position: absolute;
+    left: 50px;
+    width: 200px;
+    height: 400px;
+    background-color: rgb(195, 209, 68);
+    display: none;
+}
+
+#menu1:hover #basinConfigs{
+    display: block;
+    /* width: 150px;
+    height: 150px; */
+}
+
+#menu2:hover #hydroConfigs{
+    display: block;
+    /* width: 150px;
+    height: 150px; */
+}
+
+
+
+
