--- a/style.css
+++ b/style.css
@@ -139,12 +139,21 @@
     top: 0;
     left: 50px;
     width: 450px;
-    height: 200px;
+    height: 250px;
     background-color: rgb(235, 125, 25);
     display: none;
 
     font-size: initial;
     text-align: initial;
+}
+
+#rainConfigs input{
+   margin-right: 6px;
+    width: 20px;
+}
+
+#jan{
+    margin-left: 40px;
 }
 
 #menu1:hover #basinConfigs{
