--- a/documentation/style.css
+++ b/documentation/style.css
@@ -40,10 +40,13 @@
     height: 100%;
 }
 
-
-
 #references{
     height: 100%;
+}
+
+#waterMenu{
+    width: 600px; 
+    height: 600px;
 }
 
 table, td, th {  
@@ -73,8 +76,12 @@ table, td, th {
         height: 500px;
     }
     #basinMenu{
+        margin-left: 120px;
         width: 600px; 
         height: 500px;
+    }
+    #waterMenu{
+        margin-left: 120px;
     }
 } 
 @media only screen and (min-width: 1200px) {
@@ -93,5 +100,8 @@ table, td, th {
         margin-left: 300px;
         width: 600px; 
         height: 500px;
+    }
+    #waterMenu{
+        margin-left: 300px;
     }
 }
