--- a/style.css
+++ b/style.css
@@ -1,28 +1,8 @@
-#title{
-    position: absolute;
-    top: 150px;
-    left: 400px;
-
-    font-size: 50px;
-}
-
-#lesson1{
-    position: absolute;
-    top: 350px;
-    left: 400px;
-
-    font-size: 30px;
-}
-#lesson2{
-    position: absolute;
-    top: 350px;
-    left: 600px;
-
-    font-size: 30px;
-}
-
-#warning{
-    position: absolute;
-    bottom: 0;
-    left: 500px;
+.bt{
+    border-style: solid;
+    border-color: #008000;
+    background-color: green;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
 }
